[gd_scene load_steps=5 format=3 uid="uid://v837py5854ak"]

[ext_resource type="SpriteFrames" uid="uid://i3q5stne2j80" path="res://assets/animations.tres" id="1_4gq7n"]
[ext_resource type="Script" uid="uid://bjyh08j2u82g6" path="res://scripts/item.gd" id="1_s8enn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_s8enn"]
radius = 30.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s8enn"]
size = Vector2(4, 3)

[node name="Item" type="Area2D" groups=["Items"]]
script = ExtResource("1_s8enn")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.25, 0.25)
sprite_frames = ExtResource("1_4gq7n")
animation = &"book"

[node name="Col" type="CollisionShape2D" parent="."]
position = Vector2(1, 3)
shape = SubResource("CircleShape2D_s8enn")

[node name="TableColider" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TableColider"]
position = Vector2(1, 1)
shape = SubResource("RectangleShape2D_s8enn")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_entered" from="TableColider" to="." method="_on_table_colider_area_entered"]
[connection signal="area_exited" from="TableColider" to="." method="_on_table_colider_area_exited"]
